dashboard/dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-ingress
  namespace: kubernetes-dashboard
  labels:
    name: dashboard-ingress
spec:
  tls:
    - hosts:
      - minikube-dashboard.com
      secretName: dashboard-tls-secret
  rules:
  - host: minikube-dashboard.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: kubernetes-dashboard
            port: 
              number: 80
